--- a/GGD_Groep_9/app/src/main/res/layout/activity_main.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/ggdGeel"
+    android:background="@color/lichtgeel"
     tools:context=".MainActivity">
 
     <ListView
