--- a/GGD_Groep_9/app/src/main/res/layout/activity_main.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/lichtgeel"
+    android:background="@color/achtergrond"
     tools:context=".MainActivity">
 
     <ListView
@@ -14,5 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:dividerHeight="20.0sp"
+        android:divider="@android:color/transparent"/>
 </RelativeLayout>
