--- a/GGD_Groep_9/app/src/main/res/layout/ramp_row.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/ramp_row.xml
@@ -6,7 +6,9 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/transparantWit">
+    <!--android:background="@color/wit"-->
 
     <ImageView
         android:id="@+id/warningImage"
