--- a/GGD_Groep_9/app/src/main/res/values/colors.xml
+++ b/GGD_Groep_9/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="lichtgeel">#FEE89d</color>
     <color name="rood">#FF0000</color>
     <color name="zwart">#000000</color>
-    <color name="white">#FFFFFF</color>
-    <color name="transWhite">#CCFFFFFF</color>
+    <color name="wit">#FFFFFF</color>
+    <color name="transparantWit">#BBFFFFFF</color>
+    <color name="achtergrond">#F0F0F0</color>
 </resources>
