--- a/GGD_Groep_9/app/src/main/res/menu/menu_main.xml
+++ b/GGD_Groep_9/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+        android:icon="@mipmap/ic_action_settings"
         android:title="@string/action_settings"
         app:showAsAction="always" />
 </menu>
