--- a/GGD_Groep_9/app/src/main/res/layout/settings_activity.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/settings_activity.xml
@@ -2,4 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+    <com.google.android.gms.common.SignInButton
+        android:id="Aanmelden met Google"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TELEFOONNUMMER"
+        android:id="@+id/textView" />
 </LinearLayout>
