--- a/GGD_Groep_9/app/src/main/res/values/colors.xml
+++ b/GGD_Groep_9/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="wit">#FFFFFF</color>
     <color name="transparantWit">#BBFFFFFF</color>
     <color name="achtergrond">#F0F0F0</color>
+    <color name="textGrijs">#6A6A6A</color>
 </resources>
