--- a/GGD_Groep_9/app/src/main/res/values/styles.xml
+++ b/GGD_Groep_9/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
         <item name="android:layout_marginRight">5dp</item>
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:background">"@color/oceaanblauw</item>
+        <item name="android:background">@color/oceaanblauw</item>
     </style>
 
     <style name="settingsStyle">
