--- a/GGD_Groep_9/app/src/main/res/layout/tijdlijnrow.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/tijdlijnrow.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    android:id="@+id/tijdlijnItemRoot"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@mipmap/tijdlijnmidden">
@@ -57,5 +59,5 @@
         android:textColor="@android:color/white"
         android:text="04:20"
         android:layout_marginLeft="12dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_marginTop="15dp"/>
 </RelativeLayout>
