--- a/GGD_Groep_9/app/src/main/res/values/colors.xml
+++ b/GGD_Groep_9/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="rood">#FF0000</color>
     <color name="zwart">#000000</color>
     <color name="grijs">#6a6a6a</color>
+    <color name="lichtGrijs">#ffe8e8e8</color>
     <color name="wit">#FFFFFF</color>
     <color name="transparantWit">#BBFFFFFF</color>
     <color name="achtergrond">#F0F0F0</color>
