--- a/GGD_Groep_9/app/src/main/res/values/styles.xml
+++ b/GGD_Groep_9/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:textColor">@color/grijs</item>
     </style>
     <style name="vragenlijstStyle.Title">
-        <item name="android:layout_margin">10dp</item>
+        <item name="android:padding">6dp</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">9pt</item>
     </style>
