--- a/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
@@ -32,7 +32,8 @@
                 style="@style/vragenlijstStyle.Title"/>
 
             <EditText
-                android:layout_margin="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Raak aan om te typen..."
