--- a/GGD_Groep_9/app/src/main/res/menu/menu_vragenlijst.xml
+++ b/GGD_Groep_9/app/src/main/res/menu/menu_vragenlijst.xml
@@ -2,6 +2,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="smpt.proftaak.ggd.VragenlijstActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_sendVragenlijst"
+        android:orderInCategory="1"
+        android:icon="@mipmap/ic_action_content_send"
+        android:title="@string/action_sendVragenlijst"
+        app:showAsAction="always">
+    </item>
 </menu>
