Settings met Google +

--- a/GGD_Groep_9/app/src/main/res/layout/settings_activity.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/settings_activity.xml
@@ -18,6 +18,14 @@
             android:focusableInTouchMode="true"
             >
 
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/sign_in_button"
+                android:layout_width="233dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10px"
+                />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
