--- a/GGD_Groep_9/app/src/main/res/values/styles.xml
+++ b/GGD_Groep_9/app/src/main/res/values/styles.xml
@@ -20,4 +20,9 @@
         <item name="android:layout_marginTop">20dp</item>
     </style>
 
+    <style name="buttonBackground">
+        <item name="android:background">@drawable/button_background</item>
+    </style>
+
+
 </resources>
