--- a/GGD_Groep_9/app/src/main/res/layout/settings_activity.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/settings_activity.xml
@@ -41,7 +41,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="phone"
                 android:ems="10"
-                android:id="@+id/editText"
+                android:id="@+id/etNumber"
                 android:hint="06 12 34 56 78"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="5dp"
