Knoppen aangepast rampactivity
Nu de goede knoppen in gebruik

--- a/GGD_Groep_9/app/src/main/res/layout/ramp_activity.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/ramp_activity.xml
@@ -51,7 +51,7 @@
     </LinearLayout>
 
     <View
-        style="@style/buttonBackground"
+        android:id="@+id/buttonBackground"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@id/linearButton"
