--- a/GGD_Groep_9/app/src/main/res/layout/informatie_fragment.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/informatie_fragment.xml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="TITEL INFORMATIE"
+        android:id="@+id/txtTitel"
+        android:layout_gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/txtLaatsteUpdate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/titelInfo"
+        android:layout_below="@+id/txtTitel"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/warningImage"
+        android:src="@drawable/warning"
+        android:layout_below="@+id/txtLaatsteUpdate"
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/txtInformatie"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="New Text" />
-</LinearLayout>
+        android:text="@string/lorum_ipsum"
+        android:layout_below="@+id/warningImage"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+
+</RelativeLayout>
