Implemented catches for empty vragenlijst

--- a/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
@@ -13,6 +13,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
+                android:id="@+id/vragenlijstTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/vragenlijstStyle.Title"
