--- a/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
@@ -26,19 +26,12 @@
                 android:layout_height="wrap_content">
             </ListView>
 
-            <TextView
+            <ListView
+                android:id="@+id/vragenlijstOpenVragen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Overige symptomen"
-                style="@style/vragenlijstStyle.Title"/>
-
-            <EditText
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Raak aan om te typen..."
-                android:gravity="bottom"/>
+                android:dividerHeight="1dp">
+            </ListView>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
