--- a/GGD_Groep_9/app/src/main/res/layout/activity_main.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +9,14 @@
     android:background="@color/achtergrond"
     tools:context=".MainActivity">
 
+    </RelativeLayout>
+-->
+
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
     <ListView
         android:id="@+id/rampenListview"
         android:layout_width="wrap_content"
@@ -17,4 +25,4 @@
         android:layout_centerHorizontal="true"
         android:dividerHeight="20.0sp"
         android:divider="@android:color/transparent"/>
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
