--- a/GGD_Groep_9/app/src/main/res/layout/tijdlijnrow.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/tijdlijnrow.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             android:text="Brand breekt uit bij Chemie-Pack"
             android:textSize="9pt"
+            android:layout_marginLeft="6dp"
             android:layout_marginTop="4dp"
             android:textColor="@android:color/black"/>
 
@@ -30,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tijdlijnItemTitle"
+            android:layout_marginLeft="6dp"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
 
