--- a/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/activity_vragenlijst.xml
@@ -30,7 +30,9 @@
                 android:id="@+id/vragenlijstOpenVragen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:dividerHeight="1dp">
+                android:layout_margin="5dp"
+                android:dividerHeight="8dp"
+                android:divider="@android:color/transparent">
             </ListView>
         </LinearLayout>
     </ScrollView>
