--- a/GGD_Groep_9/app/src/main/res/layout/openvraagrow.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/openvraagrow.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DIT IS EEN OPEN VRAAG???"
+        android:layout_gravity="center_horizontal"
         android:textSize="9pt"/>
 
     <EditText
