--- a/GGD_Groep_9/app/src/main/res/values/styles.xml
+++ b/GGD_Groep_9/app/src/main/res/values/styles.xml
@@ -29,4 +29,10 @@
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textSize">9pt</item>
     </style>
+
+    <style name="fire">
+        <item name="android:src">@drawable/fire</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
 </resources>
