--- a/GGD_Groep_9/app/src/main/res/layout/ramp_activity.xml
+++ b/GGD_Groep_9/app/src/main/res/layout/ramp_activity.xml
@@ -5,19 +5,18 @@
     android:background="@color/achtergrond"
     android:orientation="vertical"
     android:weightSum="1">
-
     <LinearLayout
         android:id="@+id/linearMap"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:orientation="vertical">
 
-        <Button
-            android:id="@+id/button3"
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:text="New Button" />
-
+            android:layout_height="match_parent"
+            android:id="@+id/imageView"
+            android:src="@drawable/map"
+            android:scaleType="centerCrop"/>
     </LinearLayout>
 
     <LinearLayout
@@ -35,8 +34,7 @@
             android:layout_marginBottom="10dp"
             android:layout_weight=".5"
             android:background="@android:color/transparent"
-            android:onClick="onClick"
-            android:text="Tijdlijn" />
+            android:onClick="onClick" />
 
         <Button
             android:id="@+id/btnInformatie"
@@ -45,8 +43,7 @@
             android:layout_marginBottom="10dp"
             android:layout_weight=".5"
             android:background="@android:color/transparent"
-            android:onClick="onClick"
-            android:text="Informatie" />
+            android:onClick="onClick" />
 
     </LinearLayout>
 
@@ -65,5 +62,16 @@
         android:layout_centerHorizontal="true">
 
     </FrameLayout>
+
+
+    <ImageView
+        style="@style/fire"
+        android:id="@+id/fire"
+        android:layout_marginRight="96dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginTop="106dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
